# wxAnimator-static

./: CMakeLists.txt  README.md  README_Example.md  example.cpp
include/: animatedvalue.h  animator.h  wxButtonAnimated.h  wxCheckBoxAnimated.h  wxDlgAnimated.h  wxImageAnimated.h  wxModesDlgAnimated.h  wxStaticTextAnimated.h
src/: dummy.cpp  wxButtonAnimated.cpp  wxCheckBoxAnimated.cpp  wxDlgAnimated.cpp  wxImageAnimated.cpp  wxModesDlgAnimated.cpp  wxStaticTextAnimated.cpp
